[tool.poetry]
name = "datacon"
version = "0.0.2"
description = ""
authors = ["limonyellow <lemon@example.com>"]
license = "MIT"
homepage = "https://github.com/limonyellow/datacon"
repository = "https://github.com/limonyellow/datacon"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
